Fix Java preview issues