@@ -5,6 +5,7 @@ plugins {
 
 test {
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
 }
 
 
@@ -19,3 +20,10 @@ dependencies {
 
 mainClassName = 'donjinkrawler.Client'
 
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs.add("--enable-preview")
+}
